course home page version 1.8 - change h1 color to black to fix contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -55,7 +55,7 @@ header {
 
 header h1 {
     margin: auto 0;
-    color: #006eb6;
+    color: #000;
 
 }
 
